--- a/Solution/Rib.Common/Rib.Common.csproj
+++ b/Solution/Rib.Common/Rib.Common.csproj
@@ -70,10 +70,31 @@
     <Compile Include="Helpers\Cache\ObjectCacheFactory.cs" />
     <Compile Include="Helpers\Cache\StubCachePolicyFactory.cs" />
     <Compile Include="Helpers\Configuration\AppSettingsManager.cs" />
+    <Compile Include="Helpers\Configuration\ConfigurationItems\ConfigurationItem.cs" />
+    <Compile Include="Helpers\Configuration\ConfigurationItems\ConfigurationItemResolver.cs" />
+    <Compile Include="Helpers\Configuration\ConfigurationItems\ConfigurationItemsHelper.cs" />
+    <Compile Include="Helpers\Configuration\ConfigurationItems\ConfigurationItemsReader.cs" />
+    <Compile Include="Helpers\Configuration\ConfigurationItems\IConfigurationItemResolver.cs" />
+    <Compile Include="Helpers\Configuration\ConfigurationItems\IConfigurationItemsHelper.cs" />
+    <Compile Include="Helpers\Configuration\ConfigurationItems\IConfigurationItemsReader.cs" />
+    <Compile Include="Helpers\Configuration\ConfigurationItems\Module.cs" />
     <Compile Include="Helpers\Configuration\ISettingsManager.cs" />
     <Compile Include="Helpers\Configuration\ISettingsReader.cs" />
     <Compile Include="Helpers\Configuration\ISettingsWriter.cs" />
     <Compile Include="Helpers\Configuration\Module.cs" />
+    <Compile Include="Helpers\Configuration\Services\ConfigurationService.cs" />
+    <Compile Include="Helpers\Configuration\Services\ICanEditItemChecker.cs" />
+    <Compile Include="Helpers\Configuration\Services\IConfigurationService.cs" />
+    <Compile Include="Helpers\Configuration\Services\IConfigurationTypeResolver.cs" />
+    <Compile Include="Helpers\Configuration\Services\Module.cs" />
+    <Compile Include="Helpers\Configuration\SettingsManagers\ConfigurationManager.cs" />
+    <Compile Include="Helpers\Configuration\SettingsManagers\IConfigurationEntryCreator.cs" />
+    <Compile Include="Helpers\Configuration\SettingsManagers\IConfigurationManager.cs" />
+    <Compile Include="Helpers\Configuration\SettingsManagers\IConfigurationReader.cs" />
+    <Compile Include="Helpers\Configuration\SettingsManagers\IConfigurationWriter.cs" />
+    <Compile Include="Helpers\Configuration\SettingsManagers\ISettingsReaderFactory.cs" />
+    <Compile Include="Helpers\Configuration\SettingsManagers\ISettingsWriterFactory.cs" />
+    <Compile Include="Helpers\Configuration\SettingsManagers\Module.cs" />
     <Compile Include="Helpers\Configuration\SettingsReaderExtensions.cs" />
     <Compile Include="Helpers\Configuration\SettingsWriterExtensions.cs" />
     <Compile Include="Helpers\CorrelationId\ICorrelationIdStore.cs" />
