--- a/Solution/Rib.Common.Models/Rib.Common.Models.csproj
+++ b/Solution/Rib.Common.Models/Rib.Common.Models.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Rib.Common.Models.nuspec" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
