Change parameter to ICustomAttributesProvider Change interface and move methods to extensions class Cache key creating move to interface

--- a/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
+++ b/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
@@ -290,6 +290,7 @@
     <Compile Include="Helpers\Mailing\MailSenderTests.cs" />
     <Compile Include="Helpers\Mailing\SmtpClientFactoryTests.cs" />
     <Compile Include="Helpers\Metadata\AttributesReaderExtensionsTests.cs" />
+    <Compile Include="Helpers\Metadata\AttributesReaderKeyFactoryTests.cs" />
     <Compile Include="Helpers\Metadata\AttributesReaderTests.cs" />
     <Compile Include="Helpers\Metadata\Enums\EnumAttributeReaderExtensionsTests.cs" />
     <Compile Include="Helpers\Metadata\Enums\EnumFieldReaderTests.cs" />
