--- a/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
+++ b/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
@@ -299,6 +299,7 @@
     <Compile Include="Helpers\Metadata\Enums\EnumReaderTests.cs" />
     <Compile Include="Helpers\ObjectExtensionsTests.cs" />
     <Compile Include="Helpers\Tmp\TmpFolderTests.cs" />
+    <Compile Include="NinjectChecker.cs" />
     <Compile Include="Ninject\NinjectResolverTests.cs" />
     <Compile Include="NullArgumentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
