Check ninject bindings

--- a/Solution/Rib.Tests/Rib.Tests.csproj
+++ b/Solution/Rib.Tests/Rib.Tests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Mock\ArgumentsVerifier.cs" />
     <Compile Include="Mock\SymmetricCryptoServiceExtensionsMocker.cs" />
+    <Compile Include="Ninject\NinjectChecker.cs" />
     <Compile Include="Ninject\TestKernelCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
