--- a/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
+++ b/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
@@ -306,6 +306,7 @@
     <Compile Include="Helpers\Tmp\TmpFolderTests.cs" />
     <Compile Include="NinjectChecker.cs" />
     <Compile Include="Ninject\NinjectResolverTests.cs" />
+    <Compile Include="Ninject\RibNinjectModuleTests.cs" />
     <Compile Include="NullArgumentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
