Add expression parameter rebinder, member init merger

--- a/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
+++ b/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
@@ -98,7 +98,10 @@
     <Compile Include="Helpers\Encrypting\Symmetric\SymmetricCryptoServiceTests.cs" />
     <Compile Include="Helpers\Encrypting\Symmetric\SymmetricKeyFactoryTests.cs" />
     <Compile Include="Helpers\Expressions\ConvertRemoverTests.cs" />
+    <Compile Include="Helpers\Expressions\MemberInitMergerTests.cs" />
     <Compile Include="Helpers\Expressions\NewMakerTests.cs" />
+    <Compile Include="Helpers\Expressions\ParameterMapFactoryTests.cs" />
+    <Compile Include="Helpers\Expressions\ParameterRebinderTests.cs" />
     <Compile Include="Helpers\Expressions\PathConvertRemoverTests.cs" />
     <Compile Include="Helpers\Expressions\PropertyHelperTests.cs" />
     <Compile Include="Helpers\Expressions\PropertyStringResolverTests.cs" />
