--- a/Solution/Rib.Common/Rib.Common.csproj
+++ b/Solution/Rib.Common/Rib.Common.csproj
@@ -108,12 +108,18 @@
     <Compile Include="Helpers\Encrypting\Symmetric\SymmetricCryptoServiceExtensions.cs" />
     <Compile Include="Helpers\Encrypting\Symmetric\SymmetricKeyFactory.cs" />
     <Compile Include="Helpers\Expressions\ConvertRemover.cs" />
+    <Compile Include="Helpers\Expressions\IMemberInitMerger.cs" />
     <Compile Include="Helpers\Expressions\INewMaker.cs" />
+    <Compile Include="Helpers\Expressions\IParameterMapFactory.cs" />
+    <Compile Include="Helpers\Expressions\IParameterRebinder.cs" />
     <Compile Include="Helpers\Expressions\IPathConvertRemover.cs" />
     <Compile Include="Helpers\Expressions\IPropertyStringResolver.cs" />
     <Compile Include="Helpers\Expressions\IPropertyHelper.cs" />
     <Compile Include="Helpers\Expressions\IStringToPathProvider.cs" />
+    <Compile Include="Helpers\Expressions\MemberInitMerger.cs" />
     <Compile Include="Helpers\Expressions\NewMaker.cs" />
+    <Compile Include="Helpers\Expressions\ParameterMapFactory.cs" />
+    <Compile Include="Helpers\Expressions\ParameterRebinder.cs" />
     <Compile Include="Helpers\Expressions\PathConvertRemover.cs" />
     <Compile Include="Helpers\Expressions\PropertyHelper.cs" />
     <Compile Include="Helpers\Expressions\PropertyStringResolver.cs" />
