--- a/Solution/Rib.Common/Rib.Common.csproj
+++ b/Solution/Rib.Common/Rib.Common.csproj
@@ -156,6 +156,10 @@
     <Compile Include="Helpers\ObjectExtensions.cs" />
     <Compile Include="Helpers\Tmp\ITmpFolder.cs" />
     <Compile Include="Helpers\Tmp\TmpFolder.cs" />
+    <Compile Include="Ninject\BinderHelper.cs" />
+    <Compile Include="Ninject\BindInfo.cs" />
+    <Compile Include="Ninject\BindingScope.cs" />
+    <Compile Include="Ninject\IBindInfo.cs" />
     <Compile Include="Ninject\RibNinjectModule.cs" />
     <Compile Include="Ninject\RibCommonModule.cs" />
     <Compile Include="Ninject\IResolver.cs" />
