Tests for ninject binding

--- a/Solution/Rib.Common.Models.Tests/Rib.Common.Models.Tests.csproj
+++ b/Solution/Rib.Common.Models.Tests/Rib.Common.Models.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Exceptions\RibCommonExceptionTests.cs" />
     <Compile Include="Helpers\CorrelationIdExtensionsTests.cs" />
     <Compile Include="Helpers\CorrelationIdTests.cs" />
+    <Compile Include="Metadata\BindFromAttributeTests.cs" />
     <Compile Include="Metadata\EnumModelTests.cs" />
     <Compile Include="NullArgumentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
