--- a/Solution/Rib.Common.Binding.Ninject.Tests/packages.config
+++ b/Solution/Rib.Common.Binding.Ninject.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="JetBrains.Annotations" version="10.0.0" targetFramework="net46" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net46" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
 </packages>
