--- a/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
+++ b/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
@@ -48,10 +48,6 @@
       <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Runtime.Caching" />
@@ -122,10 +118,7 @@
     <Compile Include="Helpers\Metadata\Enums\EnumReaderTests.cs" />
     <Compile Include="Helpers\ObjectExtensionsTests.cs" />
     <Compile Include="Helpers\Tmp\TmpFolderTests.cs" />
-    <Compile Include="NinjectChecker.cs" />
     <Compile Include="Ninject\BinderHelperTests.cs" />
-    <Compile Include="Ninject\NinjectResolverTests.cs" />
-    <Compile Include="Ninject\RibNinjectModuleTests.cs" />
     <Compile Include="NullArgumentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -134,6 +127,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Rib.Common.Binding.Ninject\Rib.Common.Binding.Ninject.csproj">
+      <Project>{F9AF52F5-3122-4732-8123-3C8D0A76B23F}</Project>
+      <Name>Rib.Common.Binding.Ninject</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rib.Common.Binding\Rib.Common.Binding.csproj">
+      <Project>{EFE6DD01-A017-4E2D-9C16-822C6CAACCD4}</Project>
+      <Name>Rib.Common.Binding</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Rib.Common.Models\Rib.Common.Models.csproj">
       <Project>{A7118FA8-3EAF-4E2F-84C7-D70A5F14F023}</Project>
       <Name>Rib.Common.Models</Name>
