--- a/Solution/Rib.Common/Rib.Common.csproj
+++ b/Solution/Rib.Common/Rib.Common.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyInjection\BindingEngine.cs" />
+    <Compile Include="DependencyInjection\IBinder.cs" />
+    <Compile Include="DependencyInjection\IBinderHelper.cs" />
     <Compile Include="Helpers\Cache\CacheCleaner.cs" />
     <Compile Include="Helpers\Cache\CacheTryGetResult.cs" />
     <Compile Include="Helpers\Cache\CacheItemRemovedEventArgs.cs" />
@@ -149,8 +152,8 @@
     <Compile Include="Helpers\ObjectExtensions.cs" />
     <Compile Include="Helpers\Tmp\ITmpFolder.cs" />
     <Compile Include="Helpers\Tmp\TmpFolder.cs" />
-    <Compile Include="Ninject\BinderHelper.cs" />
-    <Compile Include="Ninject\IResolver.cs" />
+    <Compile Include="DependencyInjection\BinderHelper.cs" />
+    <Compile Include="DependencyInjection\IResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
