--- a/Solution/Rib.Common.Binding.Ninject.Tests/Rib.Common.Binding.Ninject.Tests.csproj
+++ b/Solution/Rib.Common.Binding.Ninject.Tests/Rib.Common.Binding.Ninject.Tests.csproj
@@ -62,6 +62,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BinderHelperTests.cs" />
     <Compile Include="NinjectChecker.cs" />
     <Compile Include="NinjectResolverTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -86,10 +87,6 @@
     <ProjectReference Include="..\Rib.Tests\Rib.Tests.csproj">
       <Project>{9BF49E22-995F-472B-90E1-D37C1D323598}</Project>
       <Name>Rib.Tests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TestForNinjectBindingsErrorNamed\TestForNinjectBindingsErrorNamed.csproj">
-      <Project>{8F811F3C-9D2D-4AA7-8D10-A6CEA8BB0A1E}</Project>
-      <Name>TestForNinjectBindingsErrorNamed</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
