--- a/Solution/Rib.Common.Binding.Ninject/Rib.Common.Binding.Ninject.csproj
+++ b/Solution/Rib.Common.Binding.Ninject/Rib.Common.Binding.Ninject.csproj
@@ -41,6 +41,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NinjectBinder.cs" />
     <Compile Include="NinjectResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RibNinjectModule.cs" />
