--- a/Solution/Rib.Common.Binding.Ninject.Tests/Rib.Common.Binding.Ninject.Tests.csproj
+++ b/Solution/Rib.Common.Binding.Ninject.Tests/Rib.Common.Binding.Ninject.Tests.csproj
@@ -63,6 +63,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BinderHelperTests.cs" />
+    <Compile Include="DefaultScopeBinderTests.cs" />
     <Compile Include="NinjectBinderTests.cs" />
     <Compile Include="NinjectChecker.cs" />
     <Compile Include="NinjectResolverTests.cs" />
