--- a/Solution/Rib.Common.Tests/packages.config
+++ b/Solution/Rib.Common.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JetBrains.Annotations" version="10.0.0" targetFramework="net46" />
+  <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net46" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net46" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net46" />
 </packages>
