--- a/Solution/Rib.Common.Binding.Ninject/Rib.Common.Binding.Ninject.nuspec
+++ b/Solution/Rib.Common.Binding.Ninject/Rib.Common.Binding.Ninject.nuspec
@@ -2,23 +2,25 @@
 
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>Rib.Common</id>
+    <id>Rib.Common.Binding.Ninject</id>
     <version>2.0.0</version>
-    <title>Rib.Common</title>
+    <title>Rib.Common.Binding.Ninject</title>
     <authors>Pavel Kurdikov</authors>
     <owners>Pavel Kurdikov</owners>
     <licenseUrl>https://github.com/riberk/Rib.Common/blob/master/LICENSE.md</licenseUrl>
     <projectUrl>https://github.com/riberk/Rib.Common</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Common classes and interfaces for oop works with cache, ninject, application configuration and etc</description>
+    <description>Bind Rib.Common with Ninject</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags></tags>
     <dependencies>
-      <dependency id="Rib.Common.Models" version="[2.0, 3.0)" />
+      <dependency id="Rib.Common" version="[2.0, 3.0)" />
+      <dependency id="Rib.Common.Model." version="[2.0, 3.0)" />
+      <dependency id="Ninject" version="[3.2, 4.0)" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\Rib.Common.dll" target="lib\net46" />
+    <file src="bin\Release\Rib.Common.Binding.Ninject.dll" target="lib\net46" />
   </files>
 </package>
