fix ninject nuspec

--- a/Solution/Rib.Common.Binding.Ninject/Rib.Common.Binding.Ninject.nuspec
+++ b/Solution/Rib.Common.Binding.Ninject/Rib.Common.Binding.Ninject.nuspec
@@ -16,7 +16,7 @@
     <tags></tags>
     <dependencies>
       <dependency id="Rib.Common" version="[2.0, 3.0)" />
-      <dependency id="Rib.Common.Model." version="[2.0, 3.0)" />
+      <dependency id="Rib.Common.Models" version="[2.0, 3.0)" />
       <dependency id="Ninject" version="[3.2, 4.0)" />
     </dependencies>
   </metadata>
