--- a/Solution/Rib.Common.Models/Rib.Common.Models.csproj
+++ b/Solution/Rib.Common.Models/Rib.Common.Models.csproj
@@ -71,8 +71,11 @@
     <Compile Include="Interfaces\IHasModifierLink.cs" />
     <Compile Include="Metadata\BindFromAttribute.cs" />
     <Compile Include="Metadata\BindToAttribute.cs" />
+    <Compile Include="Metadata\ClientEnumAttribute.cs" />
+    <Compile Include="Metadata\ContextPropertyAttribute.cs" />
     <Compile Include="Metadata\EnumModel.cs" />
     <Compile Include="Metadata\IAssemblyInfo.cs" />
+    <Compile Include="Metadata\IContextPropertyResolver.cs" />
     <Compile Include="Metadata\IEnumModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
