--- a/Solution/Rib.Common.Application/packages.config
+++ b/Solution/Rib.Common.Application/packages.config
@@ -8,6 +8,7 @@
   <package id="TsSoft.AbstractMapper.Select" version="1.0.5878.32058" targetFramework="net46" />
   <package id="TsSoft.AbstractMapper.Update" version="1.0.5878.32058" targetFramework="net46" />
   <package id="TsSoft.BindingsDescription" version="1.0.5878.32057" targetFramework="net46" />
+  <package id="TsSoft.ContextWrapper" version="1.0.5974.34095" targetFramework="net46" />
   <package id="TsSoft.ContextWrapper.Interfaces" version="1.0.5798.24618" targetFramework="net46" />
   <package id="TsSoft.EntityRepository" version="1.0.5946.22261" targetFramework="net46" />
   <package id="TsSoft.EntityRepository.Interfaces" version="1.0.5946.22256" targetFramework="net46" />
